# DevNexus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  README.ru.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tauri-signing-key.pub  tsconfig.json  tsconfig.node.json  vite.config.js
.github/workflows/: build.yml  (+1 more)
design/: context.md  research.md
docs/: README.md  architecture.md  dev-guide.md
scripts/: dev.bat  dev.sh  generate-updates-json.sh  generate_icons.py
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: api_hub_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: get_chrome_key_linux.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api_hub/: commands.rs  e2e_tests.rs  fetch_models.rs  forwarder.rs  mod.rs  provider.rs  router.rs  server.rs  types.rs  usage.rs
src-tauri/src/api_hub/transform/: anthropic.rs  gemini.rs  mod.rs  openai.rs  responses.rs
src-tauri/src/commands/: container.rs  cookie_extractor.rs  download_manager.rs  environment.rs  migration.rs  mirror.rs  mod.rs  network.rs  password_manager.rs  port_manager.rs  process_manager.rs  process_ports.rs  scheduler.rs  software.rs  system.rs  terminal.rs  updater.rs  version_manager.rs
src-tauri/src/download/: changelog.rs  chunk.rs  config.rs  manager.rs  mod.rs  progress.rs  storage.rs  task.rs
src-tauri/src/residue_scanner/: fs_scanner.rs  known_paths.rs  mod.rs  registry.rs  service.rs  shortcut.rs  snapshot.rs
src-tauri/src/utils/: mod.rs  shell.rs
(+60 files in other folders)
