[package]
name = "devnexus"
version = "1.0.0"
description = "One-stop developer toolstack manager"
authors = ["DevNexus"]
edition = "2021"

[lib]
name = "devnexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
which = "7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
sha1 = "0.10"
aes = "0.8"
cbc = "0.1"
csv = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3.0", features = ["apple-native", "windows-native", "linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Security_Cryptography",
  "Win32_Foundation",
  "Win32_System_Memory",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 无额外依赖（keyring 已通过 apple-native feature 覆盖）

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 无额外依赖（keyring 已通过 linux-native feature 覆盖）
